force-app/main/default/objects/JobStep__mdt/JobStep__mdt.object-meta.xml
<CustomObject>
    <description>A single node in a pipeline execution graph. References the Apex class to run, its execution mode, and which pipeline it belongs to.</description>
    <label>Job Step</label>
    <pluralLabel>Job Steps</pluralLabel>
</CustomObject>