force-app/main/default/objects/JobStep__mdt/fields/ApexClassName__c.field-meta.xml
<CustomField>
    <fullName>ApexClassName__c</fullName>
    <description>Fully-qualified Apex class name that implements ISchedulableJob. Instantiated at runtime via Type.forName().</description>
    <label>Apex Class Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>