force-app/main/default/objects/JobStep__mdt/fields/BatchSize__c.field-meta.xml
<CustomField>
    <fullName>BatchSize__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Number of records per batch chunk. Only relevant when ExecutionMode is Batch. Defaults to 200.</description>
    <label>Batch Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>