force-app/main/default/objects/JobStep__mdt/fields/BranchGroup__c.field-meta.xml
<CustomField>
    <fullName>BranchGroup__c</fullName>
    <description>Steps that share the same BranchGroup value are dispatched in parallel by the orchestrator in the same pass. Leave blank for sequential-only steps.</description>
    <label>Branch Group</label>
    <length>80</length>
    <type>Text</type>
</CustomField>