force-app/main/default/objects/JobStep__mdt/fields/ExecutionMode__c.field-meta.xml
<CustomField>
    <fullName>ExecutionMode__c</fullName>
    <description>Determines whether the step runs as a Queueable or a Batch job. Batch is recommended for large data volumes.</description>
    <label>Execution Mode</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queueable</fullName>
                <default>true</default>
                <label>Queueable</label>
            </value>
            <value>
                <fullName>Batch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>