force-app/main/default/objects/JobStep__mdt/fields/ExecutionOrder__c.field-meta.xml
<CustomField>
    <fullName>ExecutionOrder__c</fullName>
    <description>Display ordering hint used when listing steps. The DAG (JobDependency__mdt) drives the actual execution order.</description>
    <label>Execution Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>