force-app/main/default/objects/JobStep__mdt/fields/ExecutionParameters__c.field-meta.xml
<CustomField>
    <fullName>ExecutionParameters__c</fullName>
    <description>JSON key-value map of parameters passed to the job via JobExecutionContext.parameters at runtime. Example: {&quot;batchSize&quot;:500,&quot;filterDate&quot;:&quot;2024-01-01&quot;}</description>
    <label>Execution Parameters (JSON)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>