force-app/main/default/objects/JobStep__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When false this step is excluded from the pipeline graph and will not be dispatched.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>