force-app/main/default/objects/JobStep__mdt/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <description>Parent pipeline this step belongs to.</description>
    <label>Pipeline</label>
    <referenceTo>JobPipeline__mdt</referenceTo>
    <relationshipLabel>Steps</relationshipLabel>
    <relationshipName>Steps</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>