force-app/main/default/objects/JobStep__mdt/fields/RetryPolicy__c.field-meta.xml
<CustomField>
    <fullName>RetryPolicy__c</fullName>
    <description>References a JobRetryPolicy__mdt record by DeveloperName. Leave blank to use no retry.</description>
    <label>Retry Policy</label>
    <referenceTo>JobRetryPolicy__mdt</referenceTo>
    <relationshipLabel>Steps</relationshipLabel>
    <relationshipName>Steps</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>