force-app/main/default/objects/JobStep__mdt/fields/TimeoutMinutes__c.field-meta.xml
<CustomField>
    <fullName>TimeoutMinutes__c</fullName>
    <description>Step-level timeout in minutes. The watchdog will abort and fail the step if it exceeds this duration.</description>
    <label>Timeout (min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>